--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
    
 </head>
 <body>
-    <!--<div class="text-center d-flex align-items-center">
-        //<button type="button" class="btn btn-primary btn-lg">Start Quiz</button>
-    //</div>-->
-
-    <div id="state-name"></div>
-        <ul>
-            <li class="answer"><button type="button" class="btn btn-primary"></button></li>
-            <li class="answer"><button type="button" class="btn btn-primary"></button></li>
-            <li class="answer"><button type="button" class="btn btn-primary"></button></li>
-            <li class="answer"><button type="button" class="btn btn-primary"></button></li>
-        </ul>
-        
+    <div class="text-center d-flex align-items-center">
+        <button type="button" class="btn btn-primary btn-lg">Start Quiz</button>
+    </div>
+    <div id="quiz">
+        <div id="state-name"></div>
+            <ul>
+                <li class="answer" id="answer-1"></li>
+                <li class="answer" id="answer-2"></li>
+                <li class="answer" id="answer-3"></li>
+                <li class="answer" id="answer-4"></li>
+            </ul>
+        </div>   
  <!-- Link to JavaScript-->
  <script src="script.js"></script>    
 </body>
