added functionality of correct selection leading to the next question, still need lots of condensing and debugging

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
    
 </head>
 <body>
-    <div class="text-center d-flex align-items-center">
-        <button type="button" class="btn btn-primary btn-lg">Start Quiz</button>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Seconds Remaining:</h5>
+          <p class="card-text"></p>
+          <a href="#" class="btn btn-primary">Start Quiz</a>
+        </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <h2>Identify the capital of each state:</h2>
     <div id="quiz">
         <div id="state-name"></div>
             <ul>
@@ -26,7 +34,11 @@
                 <li class="answer" id="answer-3"></li>
                 <li class="answer" id="answer-4"></li>
             </ul>
-        </div>   
+        </div>
+    </div>  
+    
+ <!--Link to jQuery-->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
  <!-- Link to JavaScript-->
  <script src="script.js"></script>    
 </body>
