--- a/index.html
+++ b/index.html
@@ -15,30 +15,23 @@
    
 </head>
 <body>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Seconds Remaining:</h5>
-          <p class="card-text"></p>
-          <a href="#" class="btn btn-primary">Start Quiz</a>
+   
+    </div class="container">
+           
+        <div id="quiz" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-btns" class="btn-grid">
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
+            </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <h2>Identify the capital of each state:</h2>
-    <div id="quiz">
-        <div id="state-name"></div>
-            <ul>
-                <li class="answer" id="answer-1"></li>
-                <li class="answer" id="answer-2"></li>
-                <li class="answer" id="answer-3"></li>
-                <li class="answer" id="answer-4"></li>
-            </ul>
+        <div class="controls">
+            <button id="start-btn" class="btn btn-primary">Start Quiz</button>
+            <button id="next-btn" class="btn btn-primary hide">Next Question</button>
         </div>
-    </div>  
-    
- <!--Link to jQuery-->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    </div>   
  <!-- Link to JavaScript-->
  <script src="script.js"></script>    
 </body>
