added basic score counter, score increase triggers in selectAnswer if correct

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div class="controls">
             <button id="start-btn" class="btn btn-primary">Start Quiz</button>
         </div>
+        <div id="scoreboard">
+            <h3>TOTAL POINTS:</h3><h3 id="points">0</h3>
+        </div>
     </div>   
  <!-- Link to JavaScript-->
  <script src="script.js"></script>    
