added styling, timer, gameOver function, more questions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
 
    
@@ -21,7 +22,7 @@
         <div id="quiz" class="hide">
             <div id="question">Question</div>
             <div id="answer-btns" class="btn-grid">
-                    <button class="btn"></button>
+                    <button class="btn btn-primary"></button>
                     <button class="btn"></button>
                     <button class="btn"></button>
                     <button class="btn"></button>
@@ -32,6 +33,7 @@
         </div>
         <div id="scoreboard">
             <h3>TOTAL POINTS:</h3><h3 id="points">0</h3>
+            <h3>SECONDS REMAINING:</h3><h3 id="timer">100</h3>
         </div>
     </div>   
  <!-- Link to JavaScript-->
