--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 <body>
    
-    </div class="container">
+    <div class="container">
            
         <div id="quiz" class="hide">
             <div id="question">Question</div>
             <div id="answer-btns" class="btn-grid">
-                    <button class="btn btn-primary"></button>
+                    <button class="btn"></button>
                     <button class="btn"></button>
                     <button class="btn"></button>
                     <button class="btn"></button>
@@ -33,7 +33,16 @@
         </div>
         <div id="scoreboard">
             <h3>TOTAL POINTS:</h3><h3 id="points">0</h3>
+            <div class="time-container">
             <h3>SECONDS REMAINING:</h3><h3 id="timer">100</h3>
+            </div>
+        </div>
+        <div class="submit-score hide">
+            <form>
+                <label for="initials">Enter Initials:</label><br>
+                <input type="text" id="initals" name="initials">
+                <input type="submit" value="Submit to High Scores">
+            </form>
         </div>
     </div>   
  <!-- Link to JavaScript-->
