fixed typo in variables at top of script page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
             <form>
                 <label for="initials">Enter Initials:</label><br>
                 <input type="text" id="initals" name="initials">
-                <input type="submit" value="Submit to High Scores">
+                <input type="submit" id="submit-button" value="Submit to High Scores">
             </form>
+        </div>
+        <div id="high-scores" class="hide">
+            <ul id="score-list">
+                
+            </ul>
         </div>
     </div>   
  <!-- Link to JavaScript-->
